syntax = "proto3";

package storage.v1;

option go_package = "fleetd.sh/gen/storage/v1;storagev1";

import "google/protobuf/timestamp.proto";

service StorageService {
  rpc PutObject(PutObjectRequest) returns (PutObjectResponse);
  rpc GetObject(GetObjectRequest) returns (GetObjectResponse);
  rpc ListObjects(ListObjectsRequest) returns (stream ListObjectsResponse);
  rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse);
}

message PutObjectRequest {
  string bucket = 1;
  string key = 2;
  bytes data = 3;
}

message PutObjectResponse {
  bool success = 1;
  string message = 2;
}

message GetObjectRequest {
  string bucket = 1;
  string key = 2;
}

message GetObjectResponse {
  bytes data = 1;
  google.protobuf.Timestamp last_modified = 2;
}

message ListObjectsRequest {
  string bucket = 1;
  string prefix = 2;
}

message ListObjectsResponse {
  ObjectInfo object = 1;
}

message ObjectInfo {
  string key = 1;
  int64 size = 2;
  google.protobuf.Timestamp last_modified = 3;
}

message DeleteObjectRequest {
  string bucket = 1;
  string key = 2;
}

message DeleteObjectResponse {
  bool success = 1;
  string message = 2;
}
