syntax = "proto3";

package update.v1;

option go_package = "fleetd.sh/gen/update/v1;updatev1";

import "google/protobuf/timestamp.proto";

service UpdateService {
  rpc CreatePackage(CreatePackageRequest) returns (CreatePackageResponse);
  rpc GetPackage(GetPackageRequest) returns (GetPackageResponse);
  rpc DeletePackage(DeletePackageRequest) returns (DeletePackageResponse);
  rpc UpdatePackageMetadata(UpdatePackageMetadataRequest) returns (UpdatePackageMetadataResponse);  
  rpc GetAvailableUpdates(GetAvailableUpdatesRequest) returns (GetAvailableUpdatesResponse);
}

message Package {
  // Immutable fields
  string id = 1;
  string version = 2;
  google.protobuf.Timestamp release_date = 3;
  string file_url = 4;
  repeated string device_types = 5;
  int64 file_size = 6;
  string checksum = 7;

  // Mutable metadata fields
  string change_log = 8;
  string description = 9;
  repeated string known_issues = 10;
  map<string, string> metadata = 11;
  bool deprecated = 12;
  string deprecation_reason = 13;
  google.protobuf.Timestamp last_modified = 14;
}

message CreatePackageRequest {
  string version = 1;
  string file_url = 2;
  repeated string device_types = 3;
  int64 file_size = 4;
  string checksum = 5;
  
  // Optional metadata at creation
  string change_log = 6;
  string description = 7;
  map<string, string> metadata = 8;
}

message CreatePackageResponse {
  string id = 1;
  bool success = 2;
  string message = 3;
}

message GetPackageRequest {
  string id = 1;
}

message GetPackageResponse {
  Package package = 1;
}

message DeletePackageRequest {
  string id = 1;
}

message DeletePackageResponse {
  bool success = 1;
  string message = 2;
}

message UpdatePackageMetadataRequest {
  string id = 1;
  string change_log = 2;
  string description = 3;
  repeated string known_issues = 4;
  map<string, string> metadata = 5;
  bool deprecated = 6;
  string deprecation_reason = 7;
}

message UpdatePackageMetadataResponse {
  bool success = 1;
  string message = 2;
  google.protobuf.Timestamp last_modified = 3;
}

message GetAvailableUpdatesRequest {
  string device_type = 1;
  google.protobuf.Timestamp last_update_date = 2;
  bool include_deprecated = 3;
}

message GetAvailableUpdatesResponse {
  repeated Package packages = 1;
}
